# libkeyfinder

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile
.github/workflows/: build_package.yml
cmake/: ltCompilerWarnings.cmake
examples/: basic.cpp
src/: audiodata.cpp  audiodata.h  binode.h  chromagram.cpp  chromagram.h  chromatransform.cpp  chromatransform.h  chromatransformfactory.cpp  chromatransformfactory.h  constants.cpp  constants.h  exception.h  fftadapter.cpp  fftadapter.h  keyclassifier.cpp  keyclassifier.h  keyfinder.cpp  keyfinder.h  lowpassfilter.cpp  lowpassfilter.h  lowpassfilterfactory.cpp  lowpassfilterfactory.h  spectrumanalyser.cpp  spectrumanalyser.h  temporalwindowfactory.cpp  temporalwindowfactory.h  toneprofiles.cpp  toneprofiles.h  windowfunctions.cpp  windowfunctions.h  workspace.cpp  workspace.h
tests/: CMakeLists.txt  _testhelpers.cpp  _testhelpers.h  audiodatatest.cpp  binodetest.cpp  chromagramtest.cpp  chromatransformfactorytest.cpp  chromatransformtest.cpp  constantstest.cpp  downsamplershortcuttest.cpp  fftadaptertest.cpp  keyclassifiertest.cpp  keyfindertest.cpp  lowpassfilterfactorytest.cpp  lowpassfiltertest.cpp  temporalwindowfactorytest.cpp  toneprofilestest.cpp  windowfunctiontest.cpp  workspacetest.cpp
